--- a/Client/package.json
+++ b/Client/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^2.10.10",
     "react-bootstrap-icons": "^1.11.6",
     "react-dom": "^19.2.0",
+    "react-svg-credit-card-payment-icons": "^5.1.2",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
