--- a/Client/package.json
+++ b/Client/package.json
@@ -34,8 +34,10 @@
     "react-bootstrap-icons": "^1.11.6",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0",
+    "react-slick": "^0.31.0",
     "react-svg-credit-card-payment-icons": "^5.1.2",
     "recharts": "^2.15.4",
+    "slick-carousel": "^1.8.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
